--- a/CVSWeb/src/main/webapp/css/main.css
+++ b/CVSWeb/src/main/webapp/css/main.css
@@ -7,3 +7,15 @@ a {
 	text-decoration: none;
 	font-weight: normal;
 }
+#hov_item {
+	border: 3px solid white;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-out;
+	border-radius: 15px;
+}
+
+#hov_item:hover {
+	border: 3px solid #0d6efd;
+	border-radius: 15px;
+	
+}
