--- a/CVSWeb/src/main/webapp/css/myPageView.css
+++ b/CVSWeb/src/main/webapp/css/myPageView.css
@@ -17,20 +17,23 @@
 	height: 800px;
 }
  */
+ * {
+ 	font-family: Pretendard;
+ }
+ 
 #content {
-	float:left;
 	margin-left : 10%;
-	background-color : red;
 	text-decoration:none;
 	width : 80%;
-	max-width : 1640px;
-	min-width : 440px;
-	height: 950px;
+	height: 800px;
+	border: 1px solid #e7e7e7;
+	border-radius: 10px;
 }
+
 .b {
 	float:left;
-	margin : 30px 0px 40px 30px;
-	background-color : #808080;
+	margin : 30px 0px 30px;
+	background-color : transparent;
 	text-decoration:none;
 	width : 45%;
 	height: 90%;
@@ -40,6 +43,15 @@
 }
 .clear {
 	clear:both;
+}
+
+#profile {
+	background-image: linear-gradient(#444444, #444444), linear-gradient(to right, #fbfcb9be, #ffcdf3aa, #65d3ffaa);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+	border-radius: 50%; 
+	width: 300px; 
+	padding: 4px;
 }
 
 /* footer{
