--- a/CVSWeb/src/main/webapp/css/register.css
+++ b/CVSWeb/src/main/webapp/css/register.css
@@ -84,10 +84,11 @@ form {
 
 input {
 	background-color: #eee;
-	border: none;
+	border: 0px;
 	padding: 12px 15px;
-	margin: 8px 0;
+	margin: 8px 5px;
 	width: 100%;
+	border-radius: 3px;
 }
 
 .container {
